--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -97,9 +97,7 @@
         <jsonlib.version>2.4</jsonlib.version>
         <jtidy.version>r938</jtidy.version>
         <junit.jupiter.version>5.3.2</junit.jupiter.version>
-        <junit.platform.launcher.version>1.3.2</junit.platform.launcher.version>
-        <junit.platform.runner.version>1.3.2</junit.platform.runner.version>
-        <junit.vintage.version>5.3.2</junit.vintage.version>
+        <junit.platform.version>1.3.2</junit.platform.version>
         <kafka.version>2.0.1</kafka.version>
         <karaf.version>4.0.2</karaf.version>
         <log4j.version>2.11.0</log4j.version>
@@ -269,17 +267,17 @@
         <dependency>
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
-            <version>${junit.vintage.version}</version>
+            <version>${junit.jupiter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
-            <version>${junit.platform.launcher.version}</version>
+            <version>${junit.platform.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-runner</artifactId>
-            <version>${junit.platform.runner.version}</version>
+            <version>${junit.platform.version}</version>
         </dependency>
 
         <dependency>
@@ -655,14 +653,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
                 <configuration>
-                    <forkCount>1</forkCount>
+                    <forkCount>0</forkCount>
                 </configuration>
                 <dependencies>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>${junit.jupiter.version}</version>
-                    </dependency>
                     <dependency>
                         <groupId>org.apache.maven.surefire</groupId>
                         <artifactId>surefire-junit47</artifactId>
@@ -1087,11 +1080,6 @@
                         </configuration>
                         <dependencies>
                             <dependency>
-                                <groupId>org.junit.jupiter</groupId>
-                                <artifactId>junit-jupiter-engine</artifactId>
-                                <version>${junit.jupiter.version}</version>
-                            </dependency>
-                            <dependency>
                                 <groupId>org.apache.maven.surefire</groupId>
                                 <artifactId>surefire-junit47</artifactId>
                                 <version>${surefire.version}</version>
@@ -1118,7 +1106,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.8.0</version>
+                        <version>3.7.0</version>
                         <configuration>
                             <compilerArgs>
                                 <arg>--add-exports</arg>
