--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2,13 +2,13 @@
 
 <!--
  Copyright 2019 GridGain Systems, Inc. and Contributors.
- 
+
  Licensed under the GridGain Community Edition License (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
- 
+
      https://www.gridgain.com/products/software/community-edition/gridgain-community-edition-license
- 
+
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -131,8 +131,8 @@
         <zkclient.version>0.5</zkclient.version>
         <zookeeper.version>3.4.13</zookeeper.version>
 
-        <!-- Plugin versions -->
-        <maven.javadoc.plugin.version>2.10.1</maven.javadoc.plugin.version>
+        <!-- Maven plugins versions -->
+        <maven.javadoc.plugin.version>2.10.4</maven.javadoc.plugin.version>
 
         <!-- OSGI Manifest generation default property values -->
         <osgi.import.package>*</osgi.import.package>
