--- a/modules/core/src/main/resources/META-INF/classnames.properties
+++ b/modules/core/src/main/resources/META-INF/classnames.properties
@@ -1175,7 +1175,7 @@ org.apache.ignite.internal.processors.cache.query.jdbc.GridCacheQueryJdbcTask$Jd
 org.apache.ignite.internal.processors.cache.query.jdbc.GridCacheQueryJdbcTask$JdbcDriverJob$1
 org.apache.ignite.internal.processors.cache.query.jdbc.GridCacheQueryJdbcValidationTask
 org.apache.ignite.internal.processors.cache.query.jdbc.GridCacheQueryJdbcValidationTask$1
-org.apache.ignite.internal.processors.cache.ratemetrics.HitRateMetricsSandbox
+org.apache.ignite.internal.processors.monitoring.sensor.HitRateMetricsSandbox
 org.apache.ignite.internal.processors.cache.store.GridCacheStoreManagerAdapter$1
 org.apache.ignite.internal.processors.cache.store.GridCacheStoreManagerAdapter$2
 org.apache.ignite.internal.processors.cache.store.GridCacheStoreManagerAdapter$3
