--- a/modules/core/src/main/resources/META-INF/classnames.properties
+++ b/modules/core/src/main/resources/META-INF/classnames.properties
@@ -2347,6 +2347,10 @@ org.apache.ignite.internal.visor.tx.VisorTxTask$TxKillClosure
 org.apache.ignite.internal.visor.tx.VisorTxTask$VisorTxJob
 org.apache.ignite.internal.visor.tx.VisorTxTaskArg
 org.apache.ignite.internal.visor.tx.VisorTxTaskResult
+org.apache.ignite.internal.visor.diagnostic.VisorPageLocksTrackerArgs
+org.apache.ignite.internal.visor.diagnostic.VisorPageLocksTrackerResult
+org.apache.ignite.internal.visor.diagnostic.VisorPageLocksTrackerTask
+org.apache.ignite.internal.visor.diagnostic.VisorPageLocksTrackerTask$VisorPageLocksTrackerJob
 org.apache.ignite.internal.visor.util.VisorClusterGroupEmptyException
 org.apache.ignite.internal.visor.util.VisorEventMapper
 org.apache.ignite.internal.visor.util.VisorExceptionWrapper
