IGNITE-6957 Boxing / Unboxing optimization - added IntSet.

--- a/modules/core/src/main/resources/META-INF/classnames.properties
+++ b/modules/core/src/main/resources/META-INF/classnames.properties
@@ -1773,7 +1773,9 @@ org.apache.ignite.internal.transactions.IgniteTxSerializationCheckedException
 org.apache.ignite.internal.transactions.IgniteTxTimeoutCheckedException
 org.apache.ignite.internal.transactions.IgniteTxUnexpectedStateCheckedException
 org.apache.ignite.internal.transactions.TransactionCheckedException
-org.apache.ignite.internal.util.BitSetIntSet
+org.apache.ignite.internal.util.collection.BitSetIntSet
+org.apache.ignite.internal.util.collection.ImmutableIntSet
+org.apache.ignite.internal.util.collection.IntSet
 org.apache.ignite.internal.util.F0$1
 org.apache.ignite.internal.util.F0$2
 org.apache.ignite.internal.util.F0$3
