--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
             <modules><!-- sorted alphabetically -->
                 <module>modules/scalar-2.10</module>
                 <module>modules/scalar</module>
-                <module>modules/spark-2.10</module>
+                <!--<module>modules/spark-2.10</module>-->
                 <module>modules/spark</module>
                 <module>modules/visor-console-2.10</module>
                 <module>modules/visor-console</module>
