luence and alise support

--- a/modules/web-console/web-agent/default.properties
+++ b/modules/web-console/web-agent/default.properties
@@ -1,3 +1,4 @@
-tokens=P0MtJU4ddslaSUWiFSJL
+tokens=P0MtJU4ddslaSUWiFSJL,XeUVPP6GiZU60cqbSUK2
 server-uri=http://localhost:3000
 node-uri=http://127.0.0.1:8080
+driver-folder=D:/OpenSource/GIT/hia-data-insight/hi-repository/System/Drivers
