--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -134,7 +134,8 @@
         <yammer.metrics.annotation.version>2.2.0</yammer.metrics.annotation.version>
         <yammer.metrics.core.version>2.2.0</yammer.metrics.core.version>
         <yardstick.version>0.8.3</yardstick.version>
-        <zookeeper.version>3.5.5</zookeeper.version>
+        <zkclient.version>0.5</zkclient.version>
+        <zookeeper.version>3.4.13</zookeeper.version>
         <zstd.version>1.3.7-2</zstd.version>
 
         <!-- Maven plugins versions -->
