--- a/modules/core/src/main/resources/META-INF/classnames.properties
+++ b/modules/core/src/main/resources/META-INF/classnames.properties
@@ -2348,9 +2348,9 @@ org.apache.ignite.internal.visor.tx.VisorTxTask$VisorTxJob
 org.apache.ignite.internal.visor.tx.VisorTxTaskArg
 org.apache.ignite.internal.visor.tx.VisorTxTaskResult
 org.apache.ignite.internal.visor.diagnostic.VisorPageLocksTrackerArgs
-org.apache.ignite.internal.visor.diagnostic.VisorPageLocksTrackerResult
-org.apache.ignite.internal.visor.diagnostic.VisorPageLocksTrackerTask
-org.apache.ignite.internal.visor.diagnostic.VisorPageLocksTrackerTask$VisorPageLocksTrackerJob
+org.apache.ignite.internal.visor.diagnostic.VisorPageLocksResult
+org.apache.ignite.internal.visor.diagnostic.VisorPageLocksTask
+org.apache.ignite.internal.visor.diagnostic.VisorPageLocksTask$VisorPageLocksTrackerJob
 org.apache.ignite.internal.visor.util.VisorClusterGroupEmptyException
 org.apache.ignite.internal.visor.util.VisorEventMapper
 org.apache.ignite.internal.visor.util.VisorExceptionWrapper
