--- a/modules/opencensus/pom.xml
+++ b/modules/opencensus/pom.xml
@@ -88,5 +88,12 @@
             <version>0.3.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.io.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
