--- a/modules/indexing/pom.xml
+++ b/modules/indexing/pom.xml
@@ -66,7 +66,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.gridgain</groupId>
+            <groupId>org.apache.ignite</groupId>
             <artifactId>ignite-h2</artifactId>
             <version>${project.version}</version>
         </dependency>
