--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -158,6 +158,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-ml</artifactId>
+            <version>2.8.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
