GG-18720 Cluster-wide propagation of RollingUpgadeStatus via Distributed Metastorage

--- a/modules/core/src/main/resources/META-INF/classnames.properties
+++ b/modules/core/src/main/resources/META-INF/classnames.properties
@@ -1618,6 +1618,8 @@ org.apache.ignite.internal.processors.rest.protocols.tcp.redis.GridRedisCommand
 org.apache.ignite.internal.processors.rest.protocols.tcp.redis.GridRedisMessage
 org.apache.ignite.internal.processors.rest.protocols.tcp.redis.GridRedisNioListener$1
 org.apache.ignite.internal.processors.rest.request.RestQueryRequest$QueryType
+org.apache.ignite.internal.processors.ru.RollingUpgradeModeChangeResult
+org.apache.ignite.internal.processors.ru.RollingUpgradeStatus
 org.apache.ignite.internal.processors.service.GridServiceAssignments
 org.apache.ignite.internal.processors.service.GridServiceAssignmentsKey
 org.apache.ignite.internal.processors.service.GridServiceDeployment
@@ -2188,6 +2190,11 @@ org.apache.ignite.internal.visor.query.VisorRunningQuery
 org.apache.ignite.internal.visor.query.VisorScanQueryTask
 org.apache.ignite.internal.visor.query.VisorScanQueryTask$VisorScanQueryJob
 org.apache.ignite.internal.visor.query.VisorScanQueryTaskArg
+org.apache.ignite.internal.visor.ru.VisorRollingUpgradeChangeModeTask
+org.apache.ignite.internal.visor.ru.VisorRollingUpgradeChangeModeTask$VisorRollingUpgradeJob
+org.apache.ignite.internal.visor.ru.VisorRollingUpgradeChangeModeTaskArg
+org.apache.ignite.internal.visor.ru.VisorRollingUpgradeStatusTask
+org.apache.ignite.internal.visor.ru.VisorRollingUpgradeStatusTask$VisorRollingUpgradeStatusJob
 org.apache.ignite.internal.visor.service.VisorCancelServiceTask
 org.apache.ignite.internal.visor.service.VisorCancelServiceTask$VisorCancelServiceJob
 org.apache.ignite.internal.visor.service.VisorCancelServiceTaskArg
