--- a/modules/elasticsearch-relay/src/main/resources/elasticsearch-relay.properties
+++ b/modules/elasticsearch-relay/src/main/resources/elasticsearch-relay.properties
@@ -4,6 +4,7 @@ elasticsearch.relay.backend=ignite
 
 # general settings
 elasticsearch.relay.permissions.crawl_interval=300000
+elasticsearch.relay.permissions.crawl_url=http://127.0.0.1:8080/ignite
 
 elasticsearch.relay.log_requests=true
 
@@ -13,7 +14,7 @@ elasticsearch.url=http://127.0.0.1:8080/
 elasticsearch.api.host=127.0.0.1
 elasticsearch.api.port=9300
 
-elasticsearch.indices=_cmd,drupal,demo,ignite
+elasticsearch.indices=_cmd,drupal,demo,ignite,drupal_hr
 
 elasticsearch.indices.blacklist=nuxeo-audit,nuxeo-uidgen
 elasticsearch.types.blacklist=entry,seqId
@@ -52,10 +53,4 @@ elasticsearch.relay.nuxeo_password=secret
 elasticsearch.relay.mail_index=emails
 elasticsearch.relay.mail_type=mail
 
-# Shindig settings
-elasticsearch.relay.shindig_index=shindig
-elasticsearch.relay.shindig_activty_type=activity
-elasticsearch.relay.shindig_message_type=message
-elasticsearch.relay.shindig_person_type=person
 
-elasticsearch.relay.shindig_url=http://127.0.0.1:8080/shindig/
