--- a/modules/elasticsearch-relay/src/main/resources/elasticsearch-relay.properties
+++ b/modules/elasticsearch-relay/src/main/resources/elasticsearch-relay.properties
@@ -14,7 +14,7 @@ elasticsearch.url=http://127.0.0.1:8080/
 elasticsearch.api.host=127.0.0.1
 elasticsearch.api.port=9300
 
-elasticsearch.indices=_cmd,drupal,demo,ignite,drupal_hr
+elasticsearch.indices=_cmd,drupal,demo,ignite,drupal_hr,_all
 
 elasticsearch.indices.blacklist=nuxeo-audit,nuxeo-uidgen
 elasticsearch.types.blacklist=entry,seqId
