GG-18721 Implemented utility methods for compatibility code that take into account RollingUpgradeStatus

--- a/modules/core/src/main/resources/META-INF/classnames.properties
+++ b/modules/core/src/main/resources/META-INF/classnames.properties
@@ -1618,6 +1618,7 @@ org.apache.ignite.internal.processors.rest.protocols.tcp.redis.GridRedisCommand
 org.apache.ignite.internal.processors.rest.protocols.tcp.redis.GridRedisMessage
 org.apache.ignite.internal.processors.rest.protocols.tcp.redis.GridRedisNioListener$1
 org.apache.ignite.internal.processors.rest.request.RestQueryRequest$QueryType
+org.apache.ignite.internal.processors.ru.IgniteRollingUpgradeStatus
 org.apache.ignite.internal.processors.ru.RollingUpgradeModeChangeResult
 org.apache.ignite.internal.processors.ru.RollingUpgradeStatus
 org.apache.ignite.internal.processors.service.GridServiceAssignments
