--- a/modules/web-console/docker/console/frontend/nginx/web-console.conf
+++ b/modules/web-console/docker/console/frontend/nginx/web-console.conf
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-upstream backend-api {
+upstream backend-endpoint {
   server backend:3000;
 }
 
@@ -33,24 +33,27 @@ server {
   }
 
   location /api/v1 {
-    proxy_pass http://backend-api;
-    proxy_set_header Host $http_host;
+    proxy_pass http://backend-endpoint;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Host $http_host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_pass_header X-XSRF-TOKEN;
   }
 
   location /agents {
-    proxy_pass http://backend-api;
+    proxy_pass http://backend-endpoint;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
-    proxy_set_header Origin http://backend-api;
+    proxy_set_header Origin http://backend-endpoint;
   }
 
   location /browsers {
-    proxy_pass http://backend-api;
+    proxy_pass http://backend-endpoint;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
-    proxy_set_header Origin http://backend-api;
+    proxy_set_header Origin http://backend-endpoint;
     proxy_pass_header X-XSRF-TOKEN;
   }
 
