IGNITE-18828: SQL: Implementation of memory quotas for SQL queries.
Query quota support added for SQL API and JDBC drivers.
Global SQL quota support added.
Memory tracking support added for LocalResults.
Memory tracking support added for Groups and group aggregates.
Memory tracking support added for HashJoin indices.

--- a/modules/clients/pom.xml
+++ b/modules/clients/pom.xml
@@ -70,6 +70,14 @@
 
         <dependency>
             <groupId>org.gridgain</groupId>
+            <artifactId>ignite-indexing</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.gridgain</groupId>
             <artifactId>ignite-log4j</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
