GG-20785 Backport to 8.8-master of GG-19467 Add events system in server for decoupling components. (#194)
(cherry picked from commit e74ae1215af95de0214ccf8a67828b70a7b48d7c)

--- a/modules/web-console/web-console-common/pom.xml
+++ b/modules/web-console/web-console-common/pom.xml
@@ -59,6 +59,13 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
