IGNITE-11410 backwards compatibility

--- a/modules/core/src/main/resources/META-INF/classnames.properties
+++ b/modules/core/src/main/resources/META-INF/classnames.properties
@@ -2419,8 +2419,11 @@ org.apache.ignite.plugin.extensions.communication.Message
 org.apache.ignite.plugin.extensions.communication.MessageCollectionItemType
 org.apache.ignite.plugin.platform.PlatformCachePluginConfigurationClosure
 org.apache.ignite.plugin.platform.PlatformPluginConfigurationClosure
+org.apache.ignite.plugin.security.SecurityBasicPermissionSet
 org.apache.ignite.plugin.security.SecurityCredentials
 org.apache.ignite.plugin.security.SecurityException
+org.apache.ignite.plugin.security.SecurityPermission
+org.apache.ignite.plugin.security.SecurityPermissionSet
 org.apache.ignite.plugin.security.SecuritySubject
 org.apache.ignite.plugin.security.SecuritySubjectType
 org.apache.ignite.plugin.segmentation.SegmentationPolicy
