add params dependency

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -289,6 +289,12 @@
             <version>${javassist.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.1.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
