GG-20595 Backport to 8.8-master of GG-18760 Configuration tests moved to separate module.  (#301)
(cherry picked from commit f6e27eb)

--- a/modules/web-console/pom.xml
+++ b/modules/web-console/pom.xml
@@ -39,6 +39,7 @@
     </properties>
 
     <modules>
+        <module>web-console-configuration-tests</module>
         <module>web-console-common</module>
         <module>web-console-server</module>
         <module>web-console-mail</module>
