GG-21108 Implemented isolated discovery. (#350)

--- a/modules/web-console/web-console-mail/src/test/resources/application.yml
+++ b/modules/web-console/web-console-mail/src/test/resources/application.yml
@@ -19,3 +19,4 @@ spring.mail:
   username: username@test.com
   password: password
   from: alias <username@test.com>
+  webConsoleUrl: http://localhost:3000
