IGNITE-9410 Active transactions count limit via ThinClientConfiguration

--- a/modules/platforms/dotnet/Apache.Ignite.Core/Apache.Ignite.Core.csproj
+++ b/modules/platforms/dotnet/Apache.Ignite.Core/Apache.Ignite.Core.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Ssl\ISslContextFactory.cs" />
     <Compile Include="Configuration\Package-Info.cs" />
     <Compile Include="Configuration\ClientConnectorConfiguration.cs" />
+    <Compile Include="Configuration\ThinClientConfiguration.cs" />
     <Compile Include="Datastream\DataStreamerDefaults.cs" />
     <Compile Include="IDataRegionMetrics.cs" />
     <Compile Include="IDataStorageMetrics.cs" />
