GG-22775 Fix wrong copyright, http links and unnecessary product name in the header

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -504,12 +504,11 @@
                                 <title>Encryption SPI</title>
                                 <packages>org.apache.ignite.spi.encryption*</packages>
                             </group>
+                            <group>
+                                <title>OpenCensus Integration</title>
+                                <packages>org.apache.ignite.opencensus.spi*</packages>
+                            </group>
                         </groups>
-                        <header>
-                            <![CDATA[
-                                    Ignite - In-Memory Database and Caching Platform
-                                ]]>
-                        </header>
                         <bottom>
                             <![CDATA[
                                     <table width="100%" border="0" cellspacing=0 cellpadding=0 style="padding: 5px">
